--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://caiolelis2:Et4xOZt6S7qum1bm@cluster0.tanbsk8.mongodb.net/daily-app"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
