--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://caiolelis2:Et4xOZt6S7qum1bm@cluster0.tanbsk8.mongodb.net/daily-app"
+DATABASE_URL=mongodb+srv://caiolelis2:Et4xOZt6S7qum1bm@cluster0.tanbsk8.mongodb.net/daily-app
 NEXTAUTH_SECRET="fec05bcd16136046cd3b4e0900d9ec86"
